k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vardehytta-no-service
  namespace: clients-vardehytta-no
  labels:
    app: vardehytta-no-app
spec:
  type: ClusterIP
  selector:
    app: vardehytta-no-app
  ports:
    - protocol: TCP
      name: http
      port: 80
      targetPort: 80
