k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vardehytta-no-ingress
  namespace: clients-vardehytta-no
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
    - hosts:
        - vardehytta.no
        - www.vardehytta.no
      secretName: vardehytta-no-tls
  rules:
    - host: vardehytta.no
      http: &http_rules
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vardehytta-no-service
                port:
                  number: 80
    - host: www.vardehytta.no
      http: *http_rules
